Added: JavaFX UI.