@@ -1,1 +1,5 @@
 # domain-driven-example
+
+1. [JavaFX - Gluon.url](..%2F..%2FUsers%2Fsacre%2FAppData%2FLocal%2FTemp%2FJavaFX%20-%20Gluon.url) JavaFX 17 버전 다운로드 후 적당한 곳에 압축 해제
+2. IntelliJ에서 VM option에 --module-path "C:\lib\javafx-sdk-20.0.1\lib" --add-modules=javafx.controls,javafx.graphics,javafx.fxml,javafx.media 추가
+3. File -> Project Structure -> Module 에 1에서 설치한 JavaFX SDK 경로 추가 (lib 까지)
